<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/menu_background"
        android:orientation="vertical">

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="32dp"
            android:background="@null"
            android:text="@string/start_game_button"
            android:textStyle="italic|bold"
            android:textSize="14pt"/>

        <Button
            android:id="@+id/infoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@null"
            android:textSize="14pt"
            android:text="@string/about_game_button"
            android:textStyle="italic|bold" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@null"
            android:textSize="14pt"
            android:text="@string/close_game_button"
            android:textStyle="italic|bold" />

    </LinearLayout>


</LinearLayout>